--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -117,6 +117,10 @@ code {
     text-decoration: inherit;
 }
 
+.oneliner .summary .draft {
+    color: red;
+}
+
 .oneliner .details-trigger {
     cursor: pointer;
     background: url(/media/images/plusminus.jpg) no-repeat;
