--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -23,7 +23,7 @@
     </tr>
 </table>
 
-<h3>{% if owner %}One-liners you posted{% else %}One-liners posted{% endif %}</h3>
+<h3>{% if user == hacker %}One-liners you posted{% else %}One-liners posted{% endif %}</h3>
 
 {% include 'main/oneliners.html' %}
 
@@ -31,7 +31,7 @@
 
 <p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing this feature?</a></p>
 
-<h3>{% if owner %}One-liners you voted on{% else %}One-liners voted on{% endif %}</h3>
+<h3>{% if user == hacker %}One-liners you voted on{% else %}One-liners voted on{% endif %}</h3>
 
 <p class="warning">Not implemented yet. <a href="{% url bashoneliners.main.views.sourcecode %}">Would you be interested in implementing this feature?</a></p>
 
