added html to rss feed description

--- a/templates/feed-description.html
+++ b/templates/feed-description.html
@@ -1,8 +1,11 @@
-{{ obj.line }}
+<pre>{{ obj.line }}</pre>
 
-{% if obj.explanation %}Explanation:
-{{ obj.explanation|striptags }}
+{% if obj.explanation %}
+<h3>Explanation</h3>
+<div>{{ obj.explanation|linebreaks }}</div>
 {% endif %}
-{% if obj.limitations %}Limitations:
-{{ obj.limitations|striptags }}
+
+{% if obj.limitations %}
+<h3>Limitations</h3>
+<div>{{ obj.limitations|linebreaks }}</div>
 {% endif %}
