made published label a label

--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -55,7 +55,7 @@
 	<div class="hint">If not checked, the one-liner will not be visible in public listings.</div>
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
-	    <div class="is_published">{{ form.is_published }} Published</div>
+	    <div class="is_published">{{ form.is_published }} <label for="id_is_published">Published</label></div>
 	</div>
 
 	<p class="actions">{% for action in form.actions %}<input type="submit" name="action" value="{{ action }}"/>{% endfor %}</p>
