--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -10,25 +10,25 @@
 {% csrf_token %}
 
 <p><input type="radio" name="openid_identifier" id="id_openid_google" value="https://www.google.com/accounts/o8/id"/>
-<label for="id_openid_google">Google - https://www.google.com/accounts/o8/id</label></p>
+<label for="id_openid_google"><strong>Google</strong> - https://www.google.com/accounts/o8/id</label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_yahoo" value="http://yahoo.com"/>
-<label for="id_openid_yahoo">Yahoo! - http://yahoo.com</label></p>
+<label for="id_openid_yahoo"><strong>Yahoo!</strong> - http://yahoo.com</label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_wordpress" value="__username__.wordpress.com"/>
-<label for="id_openid_wordpress">WordPress - <input class="username" type="text" value="username"/>.wordpress.com</label></p>
+<label for="id_openid_wordpress"><strong>WordPress</strong> - <input class="username" type="text" value="username"/>.wordpress.com</label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_myopenid" value="__username__.myopenid.com"/>
-<label for="id_openid_myopenid">MyOpenID - <input class="username" type="text" value="username"/>.myopenid.com</label></p>
+<label for="id_openid_myopenid"><strong>MyOpenID</strong> - <input class="username" type="text" value="username"/>.myopenid.com</label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_livejournal" value="__username__.livejournal.com"/>
-<label for="id_openid_livejournal">LiveJournal - <input class="username" type="text" value="username"/>.livejournal.com</label></p>
+<label for="id_openid_livejournal"><strong>LiveJournal</strong> - <input class="username" type="text" value="username"/>.livejournal.com</label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_myspace" value="myspace.com/__username__"/>
-<label for="id_openid_myspace">MySpace - myspace.com/<input class="username" type="text" value="username"/></label></p>
+<label for="id_openid_myspace"><strong>MySpace</strong> - myspace.com/<input class="username" type="text" value="username"/></label></p>
 
 <p><input type="radio" name="openid_identifier" id="id_openid_launchpad" value="launchpad.net/~__username__"/>
-<label for="id_openid_launchpad">Launchpad - launchpad.net/~<input class="username" type="text" value="username"/></label></p>
+<label for="id_openid_launchpad"><strong>Launchpad</strong> - launchpad.net/~<input class="username" type="text" value="username"/></label></p>
 
 <p><input name="bsignin" type="submit" value="Login" /></p>
 </div></form>
