--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-<p>Very soon (in December I promise!) we will add a "wish list" feature,
+<p>Very soon (by end of December I promise!) we will add a "wish list" feature,
 where you can request for a one-liner and get notified when somebody posts one that answers your question.</p>
 
 <p>Until then, <strong>we encourage you</strong> to post your one-liner requests on the project mailing list:
@@ -19,6 +19,8 @@ where you can request for a one-liner and get notified when somebody posts one t
 <p>Note: the mailing list is public, the archive of posts is here:
 {{ 'https://lists.launchpad.net/bashoneliners/'|urlize }}
 </p>
+
+<p>This is really only a temporary solution until we implement the proper wish list feature, by end of December as promised. Till then it will help us if you post your requests, so we can keep posting fresh one-liners regularly.</p>
 
 <p>Thanks!<br/>
 <a href="https://launchpad.net/~bashoneliners">The BashOneLiners team</a></p>
