added back svn and git repo info

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -247,5 +247,13 @@ table.profile th {
     padding-right: 5em;
 }
 
+dl dd {
+    padding-bottom: .5em;
+}
+
+dl dd pre {
+    margin-top: 0;
+}
+
 
 /* eof */
