--- a/templates/main/sourcecode.html
+++ b/templates/main/sourcecode.html
@@ -29,8 +29,15 @@
 
     <dt>Get the source code</dt>
     <dd>
-	<pre>bzr branch lp:bashoneliners</pre>
-	<p>If you prefer Git or Subversion, it can be arranged, please drop as an email.</p>
+	<pre># using Bazaar
+bzr branch lp:bashoneliners
+
+# using Subversion (read-only mirror)
+svn checkout http://bashoneliners.googlecode.com/svn/ bashoneliners-read-only
+
+# using Git
+git clone git@github.com:titan2x/bashoneliners.git
+</pre>
     </dd>
 
 </dl>
