added notes about one-liners getting posted on twitter

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -17,6 +17,8 @@ if you would like to participate check out our <a href="{% url bashoneliners.mai
 and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> pages!
 </p>
 
+<p>In addition to <a href="{% url bashoneliners.urls.feed %}">RSS</a>, you can follow new one-liner posts on twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
+
 <h2>latest 50</h2>
 
 {% include 'main/oneliners.html' %}
