--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -10,16 +10,6 @@
 
 {% block content %}
 
-{% if user == oneliner.user %}
-<p>A few tips before you post...</p>
-
-<ul>
-    <li>Check first with search to confirm the one-liner does not yet exist.</li>
-    <li>A good one-liner is useful, interesting or cool.</li>
-    <li>Keep it clear and short.</li>
-</ul>
-{% endif %}
-
 <form action="" method="post">{% csrf_token %}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
@@ -52,7 +42,8 @@
 	</div>
 
 	<h3>Published</h3>
-	<div class="hint">If not checked, the one-liner will not be visible in public listings.</div>
+	<div class="hint">If checked, the one-liner will be visible in public listings, and will be tweeted on Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
+
 	<div class="input">
 	    <div class="error">{{ form.is_published.errors }}</div>
 	    <div class="is_published">{{ form.is_published }} <label for="id_is_published">Published</label></div>
