use url in the base template for the RSS feed

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <a href="/main/top/50/"><span>top 50</span></a> ;
     -->
     <a href="{% url bashoneliners.main.views.index %}"><span>Latest 50</span></a> ;
-    <a href="/feed/"><span>RSS</span></a>
+    <a href="{% url bashoneliners.urls.feed %}"><span>RSS</span></a>
 </div>
 
 <div class="hr"></div>
