improved question list formatting

--- a/media/css/bashoneliners.css
+++ b/media/css/bashoneliners.css
@@ -255,5 +255,13 @@ dl dd pre {
     margin-top: 0;
 }
 
+.question a.editable {
+    text-decoration: none;
+}
+
+.question blockquote small, .question blockquote small a {
+    color: silver;
+}
+
 
 /* eof */
