--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -48,7 +48,22 @@ Feel free to ask for it here.</p>
 <h2>Recent questions</h2>
 
 {% for question in recent_questions %}
-<div class="question">{{ question.question }}</div>
+<div class="question">
+    <blockquote>
+	<p>{{ question.question }}</p>
+	<small>
+	    {% if false and user == question.user %}
+	    <a class="editable" href="">&nbsp;
+	    {% if not question.is_published %}
+	    <span class="draft">(Not published!)</span>
+	    {% endif %}
+	    </a>
+	    {% endif %}
+	    by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.username }}</span> </a>
+	    on <span>{{ question.created_dt }}</span>
+	</small>
+    </blockquote>
+</div>
 {% endfor %}
 {% endif %}
 
