--- a/templates/main/wishlist.html
+++ b/templates/main/wishlist.html
@@ -44,27 +44,11 @@ Feel free to ask for it here.</p>
 <p>To post a question / wish list request, you have to <a href="{% url bashoneliners.main.views.login %}">login</a> first.</p>
 {% endif %}
 
-{% if recent_questions %}
+{% if questions %}
 <h2>Recent questions</h2>
 
-{% for question in recent_questions %}
-<div class="question">
-    <blockquote>
-	<p>{{ question.question }}</p>
-	<small>
-	    {% if false and user == question.user %}
-	    <a class="editable" href="">&nbsp;
-	    {% if not question.is_published %}
-	    <span class="draft">(Not published!)</span>
-	    {% endif %}
-	    </a>
-	    {% endif %}
-	    by <a href="{% url bashoneliners.main.views.profile question.user.pk %}"><span>{{ question.user.username }}</span> </a>
-	    on <span>{{ question.created_dt }}</span>
-	</small>
-    </blockquote>
-</div>
-{% endfor %}
+{% include 'main/questions.html' %}
+
 {% endif %}
 
 {% endblock %}
