--- a/templates/main/questions.html
+++ b/templates/main/questions.html
@@ -19,6 +19,7 @@
 		on <span>{{ question.created_dt }}</span>
 	    </small>
 	</blockquote>
+	<a href="{% url bashoneliners.main.views.new_oneliner question.pk %}"><button>Post a one-liner that answers this!</button></a>
     </div>
     {% empty %}
     <p class="message">No matching questions.</p>
