--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -19,7 +19,7 @@ and <a href="{% url bashoneliners.main.views.sourcecode %}">source code</a> page
 
 <p>In addition to <a href="{% url bashoneliners.urls.feed %}">RSS</a>, you can follow new one-liner posts on twitter: <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
 
-<h2>latest 50</h2>
+<h2>Latest 50</h2>
 
 {% include 'main/oneliners.html' %}
 
