--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<table class="profile">
+<table class="profile bordered-table">
     {% if hacker.hackerprofile.twitter_name %}
     <tr>
 	<th>Twitter name</th>
