--- a/templates/xhtml1-strict.html
+++ b/templates/xhtml1-strict.html
@@ -17,9 +17,7 @@
 	{% block javascript_src %}{% endblock %}
 	{% block custom_javascript_src %}{% endblock %}
 
-	<link rel="stylesheet" type="text/css" href="/media/css/style.css"></link>
-	<link rel="stylesheet" type="text/css" href="/media/css/layout.css"></link>
-	<link rel="stylesheet" type="text/css" href="/media/css/nav.css"></link>
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="/media/css/bashoneliners.css"></link>
 
 	{% block css %}{% endblock %}
