--- a/templates/base.html
+++ b/templates/base.html
@@ -1,96 +1,74 @@
-{% extends "xhtml1-strict.html" %}
-
-{% block javascript_src %}
-	<script type="text/javascript" src="/media/js/bashoneliners.js"></script>
-{% endblock javascript_src %}
-
-{% block css %}
-{% endblock css %}
-
-{% block javascript %}
-{% endblock javascript %}
+{% extends "html5.html" %}
 
 {% block title %}bashoneliners.com{% endblock %}
 
-{% block body %}
+{% block main %}
 
-{% if searchform %}
-<div id="searchbox">
-    <form id="search-form" method="get" action="{% url bashoneliners.main.views.search %}">
-	
-	<div>
-	    Search: {{ searchform.query }}
-	    <span id="search-loading"></span>
-	    <span id="search-errors" class="error"></span>
-	</div>
+<div class="topbar-wrapper" style="z-index: 5">
+    <div class="topbar">
+	<div class="topbar-inner">
+	    <div class="container">
+		<h3><a href="/">BashOneLiners</a></h3>
+		<ul class="nav">
+		    {% if user.is_superuser %}
+		    <li><a href="/admin/">Admin</a></li>
+		    {% endif %}
+		    {% if user.is_authenticated %}
+		    <li class="dropdown" data-dropdown="dropdown">
+			<a href="#" class="dropdown-toggle">{{ user.username }}</a>
+			<ul class="dropdown-menu">
+			    <li><a href="{% url bashoneliners.main.views.profile %}">Profile</a>
+			    <li><a href="{% url bashoneliners.main.views.new_oneliner %}">Post a one-liner</a>
+			    <li><a href="{% url bashoneliners.main.views.logout %}">Logout</a></li>
+			</ul>
+		    </li>
+		    {% else %}
+		    <li><a href="{% url bashoneliners.main.views.login %}">Login</a></li>
+		    {% endif %}
+		    <li class="dropdown" data-dropdown="dropdown">
+			<a href="#" class="dropdown-toggle">About</a>
+			<ul class="dropdown-menu">
+			    <li><a href="{% url bashoneliners.main.views.mission %}">Mission Statement</a></li>
+			    <li><a href="{% url bashoneliners.main.views.sourcecode %}">Source code</a></li>
+			</ul>
+		    </li>
+		    <li><a href="{% url bashoneliners.main.views.index %}">Latest 50</a></li>
+		    <li><a href="{% url bashoneliners.main.views.wishlist %}">Wish list</a></li>
+		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
+		</ul>
+		{% if searchform %}
+		<form class="pull-left" id="search-form" method="get" action="{% url bashoneliners.main.views.search %}">
+		    {{ searchform.query }}
+		</form>
+		{% endif %}
 
-    </form>
-</div>
-{% endif %}
-
-<div id="nav">
-    {% if user.is_superuser %}
-    <a href="/admin/"><span>Admin</span></a> ;
-    {% endif %}
-    {% if user.is_authenticated %}
-    <a href="{% url bashoneliners.main.views.profile %}"><span>{{ user.username }}</span></a> ;
-    <a href="{% url bashoneliners.main.views.new_oneliner %}"><span>Post a one-liner</span></a> ;
-    <a href="{% url bashoneliners.main.views.logout %}"><span>Logout</span></a>
-    {% else %}
-    <a href="{% url bashoneliners.main.views.login %}"><span>Login / Sign up</span></a>
-    {% endif %}
-    <br/>
-    <a href="/"><span>Home</span></a> ;
-    <a href="{% url bashoneliners.main.views.mission %}"><span>Mission Statement</span></a> ;
-    <a href="{% url bashoneliners.main.views.sourcecode %}"><span>Source code</span></a> ;
-    <a href="{% url bashoneliners.main.views.wishlist %}"><span>Wish list</span></a> ;
-    <!--
-    <a href="/main/top/50/"><span>top 50</span></a> ;
-    -->
-    <a href="{% url bashoneliners.main.views.index %}"><span>Latest 50</span></a> ;
-    <a href="{% url bashoneliners.urls.feed %}"><span>RSS</span></a>
-</div>
-
-<div class="hr"></div>
-
-{% if not w3c %}
-<div class="floatright plus1">
-    {% include 'plusone.html' %}
-</div>
-{% endif %}
+	    </div>
+	</div><!-- topbar-inner -->
+    </div><!-- topbar -->
+</div><!-- topbar-wrapper -->
 
 <div id="content">
 
-    <h2>{% block pagetitle %}{% endblock %}</h2>
+    <h1>{% block pagetitle %}{% endblock %}</h1>
 
     {% block content %}{% endblock %}
 
 </div>
 
-<div class="clear"></div>
+{% endblock main %}
 
-<div class="hr"></div>
+{% block footer %}
+    <div class="container">
+	<p class="pull-right validators"> 
+	    <a href="http://www.dreamhost.com/r.cgi?455568"><img alt="This site hosted by DreamHost. Unlimited storage and bandwidth for only $8.95" src="/media/images/dreamhost.gif" /></a> 
+	    <a href="http://www.dreamhost.com/green.cgi"><img alt="Green Web Hosting! This site hosted by DreamHost." src="/media/images/green1.gif" height="31" /></a> 
+	    <a href="http://validator.w3.org/check?uri=referer"><img src="/media/images/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict" /></a> 
+	</p> 
+    </div>
 
-<p class="validators"> 
-    <a href="http://www.dreamhost.com/r.cgi?455568"><img alt="This site hosted by DreamHost. Unlimited storage and bandwidth for only $8.95" src="/media/images/dreamhost.gif" /></a> 
-    <a href="http://www.dreamhost.com/green.cgi"><img alt="Green Web Hosting! This site hosted by DreamHost." src="/media/images/green1.gif" height="31" /></a> 
-    <a href="http://validator.w3.org/check?uri=referer"><img src="/media/images/valid-xhtml10.png" alt="Valid XHTML 1.0 Strict" /></a> 
-</p> 
-
-<script type="text/javascript">
-    <!--
-    $(document).ready(function() {
-	//$('#id_query').focus();
-
-	{% block ready %}{% endblock %}
-    });
-    //-->
-</script>
-
-<div id="templates" class="hidden" >
-    <span class="search-loading">
-	<img src="/media/images/loading.gif" alt="" title="" />
-    </span>
-</div>
-
-{% endblock body %}
+    <div id="templates" class="hidden" >
+	<span class="search-loading">
+	    <img src="/media/images/loading.gif" alt="" title="" />
+	</span>
+    </div>
+{% endblock %}
