--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -9,35 +9,68 @@
 <form id="openid-form" method="post" action="/openid/login/"><div>
 {% csrf_token %}
 
-<p><input type="radio" name="openid_identifier" id="id_openid_google" value="https://www.google.com/accounts/o8/id"/>
-<label for="id_openid_google"><strong>Google</strong> - https://www.google.com/accounts/o8/id</label></p>
+<ul class="inputs-list">
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_google" value="https://www.google.com/accounts/o8/id"/>
+	    <span>Google - https://www.google.com/accounts/o8/id</span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_yahoo" value="http://yahoo.com"/>
-<label for="id_openid_yahoo"><strong>Yahoo!</strong> - http://yahoo.com</label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_yahoo" value="http://yahoo.com"/>
+	    <span>Yahoo! - http://yahoo.com</span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_wordpress" value="__username__.wordpress.com"/>
-<label for="id_openid_wordpress"><strong>WordPress</strong> - <input class="username" type="text" value="username"/>.wordpress.com</label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_wordpress" value="__username__.wordpress.com"/>
+	    <span>WordPress - <input class="username" type="text" value="username"/>.wordpress.com</span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_myopenid" value="__username__.myopenid.com"/>
-<label for="id_openid_myopenid"><strong>MyOpenID</strong> - <input class="username" type="text" value="username"/>.myopenid.com</label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_myopenid" value="__username__.myopenid.com"/>
+	    <span>MyOpenID - <input class="username" type="text" value="username"/>.myopenid.com</span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_livejournal" value="__username__.livejournal.com"/>
-<label for="id_openid_livejournal"><strong>LiveJournal</strong> - <input class="username" type="text" value="username"/>.livejournal.com</label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_livejournal" value="__username__.livejournal.com"/>
+	    <span>LiveJournal - <input class="username" type="text" value="username"/>.livejournal.com</span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_myspace" value="myspace.com/__username__"/>
-<label for="id_openid_myspace"><strong>MySpace</strong> - myspace.com/<input class="username" type="text" value="username"/></label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_myspace" value="myspace.com/__username__"/>
+	    <span>MySpace - myspace.com/<input class="username" type="text" value="username"/></span>
+	</label>
+    </li>
 
-<p><input type="radio" name="openid_identifier" id="id_openid_launchpad" value="launchpad.net/~__username__"/>
-<label for="id_openid_launchpad"><strong>Launchpad</strong> - launchpad.net/~<input class="username" type="text" value="username"/></label></p>
+    <li>
+	<label>
+	    <input type="radio" name="openid_identifier" id="id_openid_launchpad" value="launchpad.net/~__username__"/>
+	    <span>Launchpad - launchpad.net/~<input class="username" type="text" value="username"/></span>
+	</label>
+    </li>
+</ul>
 
-<p><input name="bsignin" type="submit" value="Login" /></p>
+<p><input name="bsignin" type="submit" value="Login" class="btn primary" /></p>
 </div></form>
 
 <form id="openid-form-other" method="post" action="/openid/login/"><div>
 {% csrf_token %}
-<label for="id_openid_identifier"><strong>Or,</strong> enter other OpenID provider URL: </label><input type="text" id="id_openid_identifier" class="openid" name="openid_identifier" maxlength="255" size="30" />
-    <input name="bsignin" type="submit" value="Login" />
+<p><strong>Or,</strong> enter other OpenID provider URL:</p>
+<input type="text" id="id_openid_identifier" class="openid xlarge" name="openid_identifier" maxlength="255" size="30" />
+<input class="btn primary" name="bsignin" type="submit" value="Login" />
 </div></form>
+
+<div class="clear"></div>
 
 <p>Tip: if you don't know the URL of your OpenID provider, have a look at this wiki page: {{ 'http://en.wikipedia.org/wiki/OpenID'|urlize }}</p>
 
