--- a/templates/main/oneliners.html
+++ b/templates/main/oneliners.html
@@ -19,10 +19,10 @@
 
 	<pre>{% for line in oneliner.lines %}<span class="prompt">$ </span>{{ line }}<br/>{% endfor %}</pre>
 
-	<p class="author">
-	by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.username }}</span> </a>
+	<p class="author"><small>
+	&mdash; by <a href="{% url bashoneliners.main.views.profile oneliner.user.pk %}"><span>{{ oneliner.user.username }}</span> </a>
 	    on <span>{{ oneliner.created_dt }}</span>
-	</p>
+	</small></p>
 
 	{% if oneliner.explanation or oneliner.limitations %}
 	<div class="details hidden">
