--- a/templates/main/sourcecode.html
+++ b/templates/main/sourcecode.html
@@ -15,7 +15,7 @@
 
 <p>If you would like to participate in developing this site, please contact us at <a href="mailto:bashoneliners@lists.launchpad.net">bashoneliners@lists.launchpad.net</a> and let's start the conversation!</p>
 
-<dl>
+<dl class="sourcecode">
     <dt>Task management, upcoming features</dt>
     <dd>
 	<a href="https://trello.com/board/main/4e7da3cf5a94680b35000893">https://trello.com/board/main/4e7da3cf5a94680b35000893</a>
