--- a/templates/html5.html
+++ b/templates/html5.html
@@ -10,11 +10,13 @@
 
   <!-- Use the .htaccess and remove these lines to avoid edge case issues.
        More info: h5bp.com/b/378 -->
+  <!--
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  -->
 
   <title>{% block title %}{% endblock %}</title>
   <meta name="description" content="{% block description %}{% endblock %}">
-  <meta name="author" content="{% block author %}{% endblock %}">
+  <meta name="author" content="Janos Gyerik info@bashoneliners.com">
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -23,7 +25,7 @@
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css"></link>
+  <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
   <link rel="stylesheet" href="/media/css/bashoneliners.css">
   <!-- end CSS-->
 
