revised mission statement

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 			    <li><a href="{% url bashoneliners.main.views.sourcecode %}">Source code</a></li>
 			</ul>
 		    </li>
-		    <li><a href="{% url bashoneliners.main.views.index %}">Latest 50</a></li>
+		    <li><a href="{% url bashoneliners.main.views.index %}">Latest</a></li>
 		    <li><a href="{% url bashoneliners.main.views.wishlist %}">Wish list</a></li>
 		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
 		</ul>
