--- a/templates/main/mission.html
+++ b/templates/main/mission.html
@@ -14,11 +14,10 @@
 
 <dl class="mission">
     <dt>MISSION</dt>
-    <dd>Create a collection of practical or just pure awesome(!) bash or ksh <em>one-liners</em> or tips, with easy to use user interfaces for browsing, searching and contributing one-liners.
-    </dd>
+    <dd>Create a website for building up a collection of practical or just pure awesome bash one-liners or shell script tips and tricks for GNU Linux and similar systems. Open, collaborative system, user friendly, with functions to contribute one-liners, request one-liners, search, rss feed, commenting, Open ID login. Open-source project, using modern web technologies.</dd>
 
     <dt>OPPORTUNITIES</dt>
-    <dd>Knowledge exchange between bash/ksh gurus, fresh ideas by new contributors, education of users new to Linux, coffee break entertainment.
+    <dd>Knowledge exchange between bash gurus, fresh ideas by new contributors, education of users new to GNU Linux, coffee break entertainment. Also: "XYZOneLiners" &mdash; clone systems for the same purpose but different focus subject, such as jQueryOneLiners, AndroidOneLiners, or even ArduinoTips and GardeningHacks.
     </dd>
 
     <dt>AREAS OF COLLABORATION</dt>
