--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,10 @@
     <div class="topbar">
 	<div class="topbar-inner">
 	    <div class="container">
-		<h3><a href="/">BashOneLiners</a></h3>
+		<h3><a href="/">Bash One-Liners</a></h3>
 		<ul class="nav">
 		    {% if user.is_superuser %}
 		    <li><a href="/admin/">Admin</a></li>
-		    {% endif %}
-		    {% if user.is_authenticated %}
-		    <li class="dropdown" data-dropdown="dropdown">
-			<a href="#" class="dropdown-toggle">{{ user.username }}</a>
-			<ul class="dropdown-menu">
-			    <li><a href="{% url bashoneliners.main.views.profile %}">Profile</a>
-			    <li><a href="{% url bashoneliners.main.views.new_oneliner %}">Post a one-liner</a>
-			    <li><a href="{% url bashoneliners.main.views.logout %}">Logout</a></li>
-			</ul>
-		    </li>
-		    {% else %}
-		    <li><a href="{% url bashoneliners.main.views.login %}">Login</a></li>
 		    {% endif %}
 		    <li class="dropdown" data-dropdown="dropdown">
 			<a href="#" class="dropdown-toggle">About</a>
@@ -36,12 +24,27 @@
 		    <li><a href="{% url bashoneliners.main.views.wishlist %}">Wish list</a></li>
 		    <li><a href="{% url bashoneliners.urls.feed %}">RSS</a></li>
 		</ul>
+
 		{% if searchform %}
 		<form class="pull-left" id="search-form" method="get" action="{% url bashoneliners.main.views.search %}">
 		    {{ searchform.query }}
 		</form>
 		{% endif %}
 
+		<ul class="nav secondary-nav">
+		    {% if user.is_authenticated %}
+		    <li class="dropdown" data-dropdown="dropdown">
+			<a href="#" class="dropdown-toggle">{{ user.username }}</a>
+			<ul class="dropdown-menu">
+			    <li><a href="{% url bashoneliners.main.views.profile %}">Profile</a>
+			    <li><a href="{% url bashoneliners.main.views.new_oneliner %}">Post a one-liner</a>
+			    <li><a href="{% url bashoneliners.main.views.logout %}">Logout</a></li>
+			</ul>
+		    </li>
+		    {% else %}
+		    <li><a href="{% url bashoneliners.main.views.login %}">Login</a></li>
+		    {% endif %}
+		</ul>
 	    </div>
 	</div><!-- topbar-inner -->
     </div><!-- topbar -->
